--- a/proje/personality_test/index.html
+++ b/proje/personality_test/index.html
@@ -15,40 +15,27 @@
 <body>
     <div class="container">
         <div class="pre-registration center">
-            <button class="giris">Giriş Yap</button>
-            <button class="kayit">Kayıt Ol</button>
+            <button class="giris" id="giris">Log In</button>
         </div>
 
-        <!-- register -->
-        <div class="log_register center">
-            <div class="user_info">
-                <form action="" for="info_buttons">
-                    <h2>Kullanıcı Adı</h2>
-                    <input type="text" placeholder="Adınız">
-                    <h2>Şifre</h2>
-                    <input type="password" placeholder="Şifreniz">
-                    <h2>E-posta adresi</h2>
-                    <input type="email" placeholder="E-mail">
-                </form>
-                <div class="info_buttons">
-                    <button class="register">Kayıt Ol</button>
-                </div>
-            </div>
-        </div>
         <!-- Logın -->
         <div class="log_ın center">
             <div class="user_info">
-                <form action="" for="info_buttons">
-                    <h2>Kullanıcı Adı</h2>
-                    <input type="text" placeholder="Adınız">
-                    <h2>Şifre</h2>
-                    <input type="password" placeholder="Şifreniz">
-                    <h2>E-posta adresi</h2>
-                    <input type="email" placeholder="E-mail">
+
+                <form action="" name="aaa">
+                    <h2>Name</h2>
+                    <input type="text" placeholder="Name" required>
+
+                    <h2>Surname</h2>
+                    <input type="text" placeholder="Surname" required>
+
+                    <h2>E-mail</h2>
+                    <input type="email" placeholder="E-mail" required>
+
+                    <div class="info_buttons">
+                        <button class="logIn">Log In</button>
+                    </div>
                 </form>
-                <div class="info_buttons">
-                    <button class="logIn">Giriş Yap</button>
-                </div>
             </div>
         </div>
 
